# core

./: CMakeLists.txt
include/: lilac_hook.h  lilac_hook.hpp
src/: CMakeLists.txt  lilac_hook.cpp
src/impl/: lilac_hook_allocator.hpp  lilac_hook_android.cpp  lilac_hook_android.hpp  lilac_hook_impl.cpp  lilac_hook_impl.hpp  lilac_hook_ios.cpp  lilac_hook_ios.hpp  lilac_hook_macos.hpp  lilac_hook_platform.hpp  lilac_hook_windows.cpp  lilac_hook_windows.hpp
test/: CMakeLists.txt
